# PyLite

./: .gitignore  Makefile  build.bat  build.ps1
examples/: demo.py  factorial.py  fibonacci.py  guessing_game.py  lists.py  test_bug.py  test_bug2.py
gui/: CMakeLists.txt  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  test_qt_token.cpp
include/: analyzer.h  ast.h  builtins.h  environment.h  interpreter.h  lexer.h  parser.h  token.h  value.h
src/: analyzer.c  ast.c  ast_printer.c  builtins.c  environment.c  eval.c  interpreter.c  lexer.c  main.c  parser.c  token.c  value.c
tests/: test_analyzer.c  test_interpreter.c  test_lexer.c  test_parser.c
